# pathtracer

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  bench.txt  build-linux.sh  build.bat  todo.txt
.github/workflows/: cmake.yml  cmake_linux.yml  cmake_windows.yml
res/: CornellBox-Bunny.mtl  CornellBox-Mirror-Modified.mtl  CornellBox-Original.mtl  CornellBox-Suzanne.mtl  robot.mtl  stanford-bunny.mtl  suzanne.mtl  tris.mtl
res/CornellBox/: CornellBox-Mirror.mtl
shaders/: framebuffer.comp  framebuffer.frag  framebuffer.vert
src/: bvh.cpp  bvh.hpp  defines.hpp  intersect.cpp  intersect.hpp  loader.cpp  loader.h  loader.hpp  loader_remake.cpp  loader_remake.h  main.cpp  mat3.cpp  mat4.cpp  mat4.hpp  material.cpp  material.hpp  math.cpp  math.hpp  pathtracer.hpp  ray.cpp  ray.hpp  scene.hpp  sphere.cpp  threads.cpp  threads.hpp  threads_linux.cpp  threads_linux.hpp  threads_win32.cpp  threads_win32.hpp  triangle.cpp  triangle.hpp  vec.cpp  vec.hpp  vec3f.hpp
src/core/: array.hpp  utils.h
src/display/: display.cpp  display.hpp
src/math/: mat3.cpp  mat3.hpp  mat4.cpp  mat4.hpp  math.cpp  math.hpp  vec.cpp  vec.hpp
src/resource/: shader.cpp  shader.hpp
src/scene/: bvh.cpp  bvh.h  bvh.hpp  camera.cpp  camera.hpp  material.cpp  material.hpp  mesh.cpp  mesh.h  model.cpp  model.h  ray.cpp  ray.hpp  scene.cpp  scene.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
src/window/: window.cpp  window.hpp
